# joseph_test_repo

./: .gitignore  README.md  app.py  calculator.py  calculator_test.py  db.sqlite3  demo.js  image_processor.py  index.html  integrate_pr_issue.py  main.py  manage.py  package-lock.json  package.json  parser.py  processing_functions.py  readme.md  requirements.txt  run_calculator.py  script.js  server.js  style.css  styles.css  task.md  task.txt  test_calculator.py  ui.py  unit_converter.py  visualize_sorting.py
calculator/: calculator.py  parser.py  ui.py
card_display_project/: asgi.py  settings.py  urls.py  wsgi.py
cards/: settings.py  urls.py  views.py
cards/templates/cards/: index.html
database/: tracker.db
input_data/: issue_detail.jsonl  pr_detail.jsonl
public/: app.js  index.html  sample-issues.json  sample-pulls.json  script.js  styles.css
sample_data/: issue_detail_test.jsonl  pr_detail_test.jsonl  pr_issue_single_test.jsonl  prs_collection_test.jsonl
scripts/: aggregate_stats.py  init_db.py  load_data.py  show_table.py
static/: app.js  styles.css
templates/: base.html  detail.html  homepage.html  index.html  layout.html  visualize.html
unit-converter-app/: LICENSE.txt  README.md  pyproject.toml
unit-converter-app/src/unit_converter_app/: __about__.py  __init__.py  app.py  converter.py
unit-converter-app/tests/: __init__.py  test_converter.py
userproject/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: index.html
viewer/: views.py
viewer/templates/viewer/: index.html
webapp/: settings.py  urls.py
