[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unit-converter-app"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "copilot-swe-agent[bot]", email = "198982749+Copilot@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/copilot-swe-agent[bot]/unit-converter-app#readme"
Issues = "https://github.com/copilot-swe-agent[bot]/unit-converter-app/issues"
Source = "https://github.com/copilot-swe-agent[bot]/unit-converter-app"

[tool.hatch.version]
path = "src/unit_converter_app/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/unit_converter_app tests}"

[tool.coverage.run]
source_pkgs = ["unit_converter_app", "tests"]
branch = true
parallel = true
omit = [
  "src/unit_converter_app/__about__.py",
]

[tool.coverage.paths]
unit_converter_app = ["src/unit_converter_app", "*/unit-converter-app/src/unit_converter_app"]
tests = ["tests", "*/unit-converter-app/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
